--- a/package.json
+++ b/package.json
@@ -1,18 +1,25 @@
 {
-  "name": "libnow",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "@vitejs/plugin-react": "^1.0.7",
-    "vite": "^2.8.0"
-  }
+	"name": "libnow",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@emotion/react": "^11.8.1",
+		"@emotion/styled": "^11.8.1",
+		"@mui/icons-material": "^5.4.2",
+		"@mui/material": "^5.4.3",
+		"@mui/styles": "^5.4.2",
+		"axios": "^0.26.0",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2",
+		"react-router-dom": "^6.2.1"
+	},
+	"devDependencies": {
+		"@vitejs/plugin-react": "^1.0.7",
+		"vite": "^2.8.0"
+	}
 }
