--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@mui/material": "^5.4.3",
 		"@mui/styles": "^5.4.2",
 		"axios": "^0.26.0",
+		"json-server": "^0.17.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-router-dom": "^6.2.1"
