--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"@mui/icons-material": "^5.4.2",
 		"@mui/material": "^5.4.3",
 		"@mui/styles": "^5.4.2",
-		"axios": "^0.26.0",
+		"axios": "^0.25.0",
+		"cors": "^2.8.5",
+		"express": "^4.17.3",
 		"json-server": "^0.17.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
