--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
 		"json-server": "^0.17.0",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
-		"react-router-dom": "^6.2.1"
+		"react-router-dom": "^6.2.1",
+		"use-timer": "^2.0.1"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react": "^1.0.7",
